--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dscvr-one/canvas-client-sdk": "^1.1.1",
+    "@dscvr-one/canvas-interface": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
